Convert Java 21 code to Java 8 compatibility
Co-Authored-By: 于泽棋 <finyu@webank.com>